=== v1.1.2
* tests pass on Ruby 3
* do not assume lock owner has a href child, preserve any owner value as-is
* allow passing lock scope and type values without namespace

=== v1.1.1
* fix handling of some paths that were changed by NFKC normalization (i.e. 'º'->'o')
* adds Request#authorization reader for the HTTP_AUTHORIZATION header

=== v1.1.0
* treat head like get - this may affect custom resource implementations
* Uri class to encapsulate uri parsing / path splitting
* make destination header parsing more tolerant

=== v1.0.0
* better MS webdav client support
* fix insecure password checks in resource implementations
* refactorings
* moved more XML generation to OX
* many, most probably breaking, changes by reorganizing code

=== v0.3.0
* New minor release towards full litmus pass
* Litmus passing: basic, copymove, props
* Litmus in progress: locks
* Internal reorganization of file structures
* Propfind updates to provide proper returns (thanks {schmurfy}[https://github.com/schmurfy])
* Properly detect malformed propfind requests
* Updated custom attribute storage
* Allow customized DAV headers (thanks {schmurfy}[https://github.com/schmurfy])
* Extract parent collection detection to resource (thanks {schmurfy}[https://github.com/schmurfy])
* Start of new locking implementation
* Fix rack #serving usage in DAV4Rack::File (thanks {pifleo}[https://github.com/pifleo])
* Force file namespacing in file resource to prevent conflicts with DAV4Rack::File (thanks {pifleo}[https://github.com/pifleo])
* Add ability to build xml from within a resource (thanks {mlmorg}[https://github.com/mlmorg])

=== v0.2.11
* URL escaping updates (thanks {exabugs}[https://github.com/exabugs])
* Return status updates to match RFC (thanks {exabugs}[https://github.com/exabugs])
* Add option to provide httpdate formatted creation date to MS clients (thanks {doxavore}[https://github.com/doxavore])
* New MongoDB resource (thanks {exabugs}[https://github.com/exabugs])