@@ -9,8 +9,3 @@ gem 'puma'
 gem 'minitest'
 gem 'byebug', platforms: :mri
 gem 'ruby-prof'
-
-if Gem::Version.new(RUBY_VERSION) >= Gem::Version.new('3.0.0')
-  # necessary for the file resource.
-  gem 'webrick'
-end
